# socketpractice

./: pyproject.toml
socketpractice/: client.py  server.py
