[tool.poetry]
name = "socketpractice"
version = "0.1.0"
description = ""
authors = ["Shubhrose Singh <shubhroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
ipykernel = "^6.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
